--- a/app/src/main/res/layout/activity_text.xml
+++ b/app/src/main/res/layout/activity_text.xml
@@ -11,7 +11,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="end|bottom"
-        android:layout_margin="16dp"
+        android:layout_marginBottom="@dimen/nav_header_fab_margin_bottom"
+        android:layout_marginEnd="@dimen/nav_header_fab_margin_right"
+        android:layout_marginLeft="@dimen/nav_header_fab_margin_left"
+        android:layout_marginRight="@dimen/nav_header_fab_margin_right"
+        android:layout_marginStart="@dimen/nav_header_fab_margin_left"
+        android:layout_marginTop="@dimen/nav_header_fab_margin_top"
         android:src="@drawable/ic_help" />
 
     <TextView
