FrequencyTable: Fix padding of buttons

--- a/app/src/main/res/layout/frequency_buttons.xml
+++ b/app/src/main/res/layout/frequency_buttons.xml
@@ -1,21 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimary"
-    android:paddingLeft="55dp"
-    android:paddingRight="55dp">
+    android:baselineAligned="false"
+    android:gravity="center"
+    android:orientation="horizontal">
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="start|center"
+        android:layout_weight="1"
         android:orientation="vertical">
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/frequency_refresh"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_gravity="center" />
 
         <TextView
             android:layout_width="match_parent"
@@ -29,15 +31,16 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
+        android:layout_weight="1"
         android:orientation="vertical">
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/frequency_reset"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_gravity="center" />
 
         <TextView
             android:layout_width="match_parent"
@@ -51,15 +54,16 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="end|center"
+        android:layout_weight="1"
         android:orientation="vertical">
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/frequency_restore"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_gravity="center" />
 
         <TextView
             android:layout_width="match_parent"
@@ -72,4 +76,4 @@
             android:textSize="12sp" />
     </LinearLayout>
 
-</FrameLayout>
+</LinearLayout>
