--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -19,4 +19,9 @@
 
     <dimen name="bargraph_bar_height">30dp</dimen>
     <dimen name="bargraph_text_size">15sp</dimen>
+
+    <dimen name="xygraph_height">50dp</dimen>
+    <dimen name="xygraph_width">50dp</dimen>
+    <dimen name="xygraph_edge_stroke_width">2dp</dimen>
+    <dimen name="xygraph_graph_stroke_width">1dp</dimen>
 </resources>
