--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -13,4 +13,11 @@
         <item>@string/aggressive</item>
     </string-array>
 
+    <!-- CPU Hotplug -->
+    <string-array name="endurance_level_items">
+        <item>@string/disabled</item>
+        <item>@string/quad_core_mode</item>
+        <item>@string/dual_core_mode</item>
+    </string-array>
+
 </resources>
