Add screen settings

--- a/app/src/main/res/layout/fragment_base_control.xml
+++ b/app/src/main/res/layout/fragment_base_control.xml
@@ -43,7 +43,10 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="bottom"
-        android:layout_margin="16dp"
+        android:layout_marginBottom="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginTop="48dp"
         android:visibility="gone"
         app:cardCornerRadius="5dp"
         app:cardElevation="4dp"
