--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
-    <color name="colorAccentTransparent">#50FF4081</color>
+    <color name="colorPrimary">#3f51B5</color>
+    <color name="colorPrimaryDark">#303f9f</color>
+    <color name="colorAccent">#ff4081</color>
 
     <color name="black">@android:color/black</color>
     <color name="white">@android:color/white</color>
     <color name="green">#4caf50</color>
     <color name="red">#f44336</color>
     <color name="orange">#ffff8800</color>
+
+    <color name="divider">#dddddd</color>
 </resources>
