--- a/app/src/main/res/layout/rv_title_view.xml
+++ b/app/src/main/res/layout/rv_title_view.xml
@@ -14,6 +14,7 @@
         android:paddingLeft="30dp"
         android:paddingRight="30dp"
         android:paddingStart="30dp"
+        android:paddingTop="16dp"
         android:textColor="@color/white">
 
         <TextView
