--- a/app/src/main/res/layout/rv_value_view.xml
+++ b/app/src/main/res/layout/rv_value_view.xml
@@ -2,15 +2,13 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:foreground="?attr/selectableItemBackground">
+    android:background="?attr/selectableItemBackground"
+    android:padding="16dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:baselineAligned="false"
-        android:gravity="center_vertical"
-        android:orientation="vertical"
-        android:padding="16dp">
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/title"
@@ -28,18 +26,32 @@
 
             <TextView
                 android:id="@+id/summary"
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1" />
 
-            <android.support.v7.widget.SwitchCompat
-                android:id="@+id/switcher"
-                android:layout_width="80dp"
+            <FrameLayout
+                android:layout_width="150dp"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical|end" />
+                android:layout_weight="1"
+                android:gravity="end">
+
+                <TextView
+                    android:id="@+id/value"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="end"
+                    android:visibility="gone" />
+
+                <ProgressBar
+                    android:id="@+id/progress"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="end" />
+
+            </FrameLayout>
 
         </LinearLayout>
 
     </LinearLayout>
-
 </FrameLayout>
