--- a/app/src/main/res/layout/rv_title_view.xml
+++ b/app/src/main/res/layout/rv_title_view.xml
@@ -1,53 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
+<TextView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/title"
+    android:layout_width="0dp"
     android:layout_height="wrap_content"
-    android:foreground="?attr/selectableItemBackground">
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:minHeight="45dp"
-        android:paddingEnd="30dp"
-        android:paddingLeft="30dp"
-        android:paddingRight="30dp"
-        android:paddingStart="30dp"
-        android:paddingTop="16dp"
-        android:textColor="@color/white">
-
-        <TextView
-            android:id="@+id/title"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:ellipsize="middle"
-            android:fontFamily="sans-serif-thin"
-            android:singleLine="true"
-            android:textSize="23sp" />
-
-        <android.support.v7.widget.CardView
-            android:id="@+id/more_view"
-            android:layout_width="wrap_content"
-            android:layout_height="30dp"
-            android:visibility="gone"
-            app:cardCornerRadius="5dp">
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@color/colorPrimary"
-                android:ellipsize="middle"
-                android:gravity="center"
-                android:maxLines="1"
-                android:paddingLeft="7dp"
-                android:paddingRight="7dp"
-                android:text="@string/more"
-                android:textColor="@color/white"
-                android:textStyle="bold" />
-
-        </android.support.v7.widget.CardView>
-
-    </LinearLayout>
-</FrameLayout>
+    android:layout_weight="1"
+    android:ellipsize="middle"
+    android:fontFamily="sans-serif-thin"
+    android:minHeight="45dp"
+    android:paddingEnd="30dp"
+    android:paddingLeft="30dp"
+    android:paddingRight="30dp"
+    android:paddingStart="30dp"
+    android:paddingTop="16dp"
+    android:singleLine="true"
+    android:textSize="23sp" />
