--- a/app/src/main/res/layout/rv_card_view.xml
+++ b/app/src/main/res/layout/rv_card_view.xml
@@ -22,6 +22,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:fontFamily="sans-serif-thin"
+                android:textIsSelectable="true"
                 android:textSize="25sp" />
 
             <LinearLayout
