--- a/app/src/main/res/layout/fragment_base_control.xml
+++ b/app/src/main/res/layout/fragment_base_control.xml
@@ -11,26 +11,38 @@
         android:clipToPadding="false"
         android:paddingTop="200dp" />
 
-    <FrameLayout
+    <LinearLayout
         android:id="@+id/viewpagerparent"
         android:layout_width="match_parent"
         android:layout_height="200dp"
-        android:background="@color/colorPrimary">
+        android:orientation="vertical">
 
-        <android.support.v4.view.ViewPager
-            android:id="@+id/viewpager"
+        <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="197dp"
+            android:background="@color/colorPrimary">
 
-        <com.viewpagerindicator.CirclePageIndicator
-            android:id="@+id/indicator"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal|bottom"
-            android:padding="16dp"
-            app:extraSpacing="7dp" />
+            <android.support.v4.view.ViewPager
+                android:id="@+id/viewpager"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
 
-    </FrameLayout>
+            <com.viewpagerindicator.CirclePageIndicator
+                android:id="@+id/indicator"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal|bottom"
+                android:padding="16dp"
+                app:extraSpacing="7dp" />
+
+        </FrameLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="3dp"
+            android:background="@drawable/dropshadow" />
+
+    </LinearLayout>
 
     <ProgressBar
         android:id="@+id/progress"
@@ -46,7 +58,7 @@
         android:layout_marginBottom="16dp"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
-        android:layout_marginTop="48dp"
+        android:layout_marginTop="50dp"
         android:visibility="gone"
         app:cardCornerRadius="5dp"
         app:cardElevation="4dp"
