--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -27,4 +27,14 @@
         <item>@string/blue</item>
     </string-array>
 
+    <!-- Low Memory Killer -->
+    <string-array name="lmk_names">
+        <item>@string/foreground_app</item>
+        <item>@string/visible_app</item>
+        <item>@string/secondary_server</item>
+        <item>@string/hidden_app</item>
+        <item>@string/content_providers</item>
+        <item>@string/empty_app</item>
+    </string-array>
+
 </resources>
