--- a/app/src/main/res/layout/fragment_recyclerview.xml
+++ b/app/src/main/res/layout/fragment_recyclerview.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -9,7 +9,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:clipToPadding="false"
-        android:paddingTop="200dp" />
+        android:paddingTop="200dp"
+        android:visibility="gone" />
 
     <LinearLayout
         android:id="@+id/viewpagerparent"
@@ -48,7 +49,32 @@
         android:id="@+id/progress"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center" />
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true" />
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/top_fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_below="@+id/viewpagerparent"
+        android:layout_marginEnd="@dimen/recyclerview_fab_margin_right"
+        android:layout_marginRight="@dimen/recyclerview_fab_margin_right"
+        android:layout_marginTop="@dimen/recyclerview_fab_margin_top"
+        android:visibility="gone" />
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/bottom_fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginBottom="@dimen/recyclerview_fab_margin_bottom"
+        android:layout_marginEnd="@dimen/recyclerview_fab_margin_right"
+        android:layout_marginRight="@dimen/recyclerview_fab_margin_right"
+        android:visibility="gone" />
 
     <android.support.v7.widget.CardView
         android:id="@+id/foreground_parent"
@@ -94,4 +120,4 @@
 
     </android.support.v7.widget.CardView>
 
-</FrameLayout>
+</RelativeLayout>
