--- a/app/src/main/res/layout/rv_card_view.xml
+++ b/app/src/main/res/layout/rv_card_view.xml
@@ -21,6 +21,7 @@
                 android:id="@+id/card_title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
                 android:fontFamily="sans-serif-thin"
                 android:textIsSelectable="true"
                 android:textSize="25sp" />
@@ -30,6 +31,17 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical" />
+
+            <ImageButton
+                android:id="@+id/menu_button"
+                android:layout_width="30dp"
+                android:layout_height="20dp"
+                android:layout_gravity="end"
+                android:layout_marginTop="5dp"
+                android:background="?attr/selectableItemBackgroundBorderless"
+                android:scaleType="fitCenter"
+                android:src="@drawable/ic_dots"
+                android:visibility="gone" />
 
         </LinearLayout>
 
