--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,6 +6,10 @@
     <dimen name="nav_header_fab_margin_bottom">0dp</dimen>
     <dimen name="nav_header_fab_margin_top">0dp</dimen>
 
+    <dimen name="recyclerview_fab_margin_right">8dp</dimen>
+    <dimen name="recyclerview_fab_margin_top">-48dp</dimen>
+    <dimen name="recyclerview_fab_margin_bottom">8dp</dimen>
+
     <dimen name="xygraph_height">50dp</dimen>
     <dimen name="xygraph_width">50dp</dimen>
     <dimen name="xygraph_edge_stroke_width">2dp</dimen>
