--- a/app/src/main/res/layout/rv_description_view.xml
+++ b/app/src/main/res/layout/rv_description_view.xml
@@ -27,7 +27,7 @@
 
             <TextView
                 android:id="@+id/title"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="5dp"
                 android:fontFamily="sans-serif-medium"
@@ -36,7 +36,7 @@
 
             <TextView
                 android:id="@+id/summary"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textIsSelectable="true" />
 
