--- a/app/src/main/res/layout/rv_card_view.xml
+++ b/app/src/main/res/layout/rv_card_view.xml
@@ -1,50 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    app:cardCornerRadius="0dp"
+    app:cardElevation="3dp"
+    app:cardUseCompatPadding="true">
 
-    <android.support.v7.widget.CardView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:cardCornerRadius="0dp"
-        app:cardElevation="4dp"
-        app:cardUseCompatPadding="true">
+        android:orientation="vertical"
+        android:padding="16dp">
+
+        <TextView
+            android:id="@+id/card_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="start|center_vertical"
+            android:fontFamily="sans-serif-thin"
+            android:textIsSelectable="true"
+            android:textSize="25sp" />
 
         <LinearLayout
+            android:id="@+id/card_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:padding="16dp">
+            android:orientation="vertical" />
 
-            <TextView
-                android:id="@+id/card_title"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:fontFamily="sans-serif-thin"
-                android:textIsSelectable="true"
-                android:textSize="25sp" />
+        <ImageButton
+            android:id="@+id/menu_button"
+            android:layout_width="30dp"
+            android:layout_height="20dp"
+            android:layout_gravity="end"
+            android:layout_marginTop="5dp"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:scaleType="fitCenter"
+            android:src="@drawable/ic_dots"
+            android:visibility="gone" />
 
-            <LinearLayout
-                android:id="@+id/card_layout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical" />
+    </LinearLayout>
 
-            <ImageButton
-                android:id="@+id/menu_button"
-                android:layout_width="30dp"
-                android:layout_height="20dp"
-                android:layout_gravity="end"
-                android:layout_marginTop="5dp"
-                android:background="?attr/selectableItemBackgroundBorderless"
-                android:scaleType="fitCenter"
-                android:src="@drawable/ic_dots"
-                android:visibility="gone" />
-
-        </LinearLayout>
-
-    </android.support.v7.widget.CardView>
-
-</FrameLayout>
+</android.support.v7.widget.CardView>
