--- a/app/src/main/res/layout/rv_drop_down_item_view.xml
+++ b/app/src/main/res/layout/rv_drop_down_item_view.xml
@@ -7,11 +7,9 @@
     android:paddingRight="32dp">
 
     <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
+        style="@style/Divider"
         android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:background="@color/divider" />
+        android:layout_marginRight="16dp" />
 
     <LinearLayout
         android:layout_width="match_parent"
