--- a/app/src/main/res/layout/rv_frequencytable_view.xml
+++ b/app/src/main/res/layout/rv_frequencytable_view.xml
@@ -19,6 +19,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:fontFamily="sans-serif-medium"
+            android:text="test"
             android:textColor="@color/black"
             android:textSize="13sp" />
 
@@ -29,6 +30,7 @@
             android:layout_weight="1"
             android:fontFamily="sans-serif-thin"
             android:gravity="end"
+            android:text="test1"
             android:textSize="12sp" />
 
         <TextView
@@ -38,6 +40,7 @@
             android:layout_weight="1"
             android:fontFamily="sans-serif-thin"
             android:gravity="end"
+            android:text="test2"
             android:textSize="12sp" />
 
     </LinearLayout>
