--- a/app/src/main/res/layout/rv_title_view.xml
+++ b/app/src/main/res/layout/rv_title_view.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/title"
-    android:layout_width="0dp"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_weight="1"
+    android:layout_gravity="start"
     android:fontFamily="sans-serif-thin"
     android:minHeight="45dp"
     android:paddingEnd="16dp"
