--- a/app/src/main/res/values-v21/dimens.xml
+++ b/app/src/main/res/values-v21/dimens.xml
@@ -7,4 +7,6 @@
     <dimen name="recyclerview_fab_margin_right">16dp</dimen>
     <dimen name="recyclerview_fab_margin_top">-30dp</dimen>
     <dimen name="recyclerview_fab_margin_bottom">16dp</dimen>
+
+    <dimen name="rv_download_kernel_fab_margin_right">16dp</dimen>
 </resources>
