--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -25,4 +25,6 @@
     <dimen name="colortable_height">50dp</dimen>
 
     <dimen name="rv_drop_down_item_height">50dp</dimen>
+
+    <dimen name="rv_download_kernel_fab_margin_right">8dp</dimen>
 </resources>
