--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -79,4 +79,15 @@
         <item>@string/delete</item>
     </string-array>
 
+    <!-- Recovery -->
+    <string-array name="recovery_options">
+        <item>@string/cwm_recovery</item>
+        <item>@string/twrp</item>
+    </string-array>
+    <string-array name="recovery_commands">
+        <item>@string/wipe_data</item>
+        <item>@string/wipe_cache</item>
+        <item>@string/flash_zip</item>
+    </string-array>
+
 </resources>
