--- a/app/src/main/res/xml/settings.xml
+++ b/app/src/main/res/xml/settings.xml
@@ -28,7 +28,8 @@
             android:title="@string/test" />
     </PreferenceCategory>
 
-    <PreferenceCategory android:title="@string/debugging">
+    <PreferenceCategory android:title="@string/debugging"
+        android:key="debugging_category">
         <Preference
             android:key="logcat"
             android:summary="@string/logcat_summary"
@@ -41,6 +42,21 @@
             android:key="dmesg"
             android:summary="@string/driver_message_summary"
             android:title="@string/driver_message" />
+    </PreferenceCategory>
+
+    <PreferenceCategory android:title="@string/security"
+        android:key="security_category">
+        <Preference
+            android:key="set_password"
+            android:summary="@string/set_password_summary"
+            android:title="@string/set_password" />
+        <Preference
+            android:key="delete_password"
+            android:summary="@string/delete_password" />
+        <SwitchPreference
+            android:key="fingerprint"
+            android:summary="@string/fingerprint_summary"
+            android:title="@string/fingerprint" />
     </PreferenceCategory>
 
 </PreferenceScreen>
