--- a/app/src/main/res/layout/activity_security.xml
+++ b/app/src/main/res/layout/activity_security.xml
@@ -27,8 +27,8 @@
         android:textStyle="italic"
         android:visibility="gone" />
 
-    <com.mattprecious.swirl.SwirlView
-        android:id="@+id/fingerprint"
+    <FrameLayout
+        android:id="@+id/fingerprint_parent"
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:layout_alignParentBottom="true"
