Use lighter colorPrimary in dark theme
The current colorPrimary, when used in the dark theme, has too low a
contrast to be seen clearly. This is highly evident in the navigation
drawer - when an item is selected, its text cannot be seen at all.

Add a lighter version of colorPrimary to be used in the dark theme.

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,7 +12,7 @@
 
     <style name="AppThemeDark" parent="Theme.AppCompat">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimary">@color/colorPrimaryLight</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
         <item name="swirl_ridgeColor">?android:attr/textColorSecondary</item>
