--- a/app/src/main/res/layout/fragment_banner_resizer.xml
+++ b/app/src/main/res/layout/fragment_banner_resizer.xml
@@ -22,7 +22,7 @@
                 android:id="@+id/banner_view"
                 android:layout_width="match_parent"
                 android:layout_height="55dp"
-                android:background="@color/colorPrimary"
+                android:background="?attr/colorPrimary"
                 android:elevation="3dp" />
 
             <android.support.v7.widget.CardView
