--- a/app/src/main/res/layout/fragment_buildprop_search.xml
+++ b/app/src/main/res/layout/fragment_buildprop_search.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center"
-    android:background="@color/colorPrimary"
+    android:background="?attr/colorPrimary"
     android:gravity="center"
     android:orientation="vertical"
     android:padding="16dp">
