--- a/app/src/main/res/layout/fragment_recyclerview.xml
+++ b/app/src/main/res/layout/fragment_recyclerview.xml
@@ -88,7 +88,7 @@
                 android:id="@+id/foreground_text"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
-                android:background="@color/colorPrimaryDark"
+                android:background="?attr/colorPrimaryDark"
                 android:gravity="center_vertical"
                 android:maxLines="1"
                 android:paddingEnd="16dp"
