--- a/app/src/main/res/layout/viewpager_view.xml
+++ b/app/src/main/res/layout/viewpager_view.xml
@@ -9,7 +9,7 @@
         android:id="@+id/viewpager"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorPrimary"
+        android:background="?attr/colorPrimary"
         android:focusable="true"
         android:foreground="?attr/selectableItemBackground" />
 
