--- a/app/src/main/res/layout/widget_profile.xml
+++ b/app/src/main/res/layout/widget_profile.xml
@@ -8,7 +8,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="48dp"
-        android:background="@color/colorPrimary"
+        android:background="?attr/colorPrimary"
         android:gravity="center"
         android:text="@string/profile"
         android:textColor="@color/white"
