--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -10,6 +10,11 @@
         <attr name="edgevisibile" format="boolean" />
     </declare-styleable>
 
+    <declare-styleable name="BorderCircleView">
+        <attr name="circlecolor" format="color" />
+        <attr name="bordercolor" format="color" />
+    </declare-styleable>
+
     <attr name="edittext_build_prop_style" format="reference" />
     <attr name="banner_frame_drawable" format="reference" />
     <attr name="native_express_id" format="string" />
