RecyclerViewFragment: Add custom dialog view

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="?attr/colorPrimary"
     android:orientation="vertical">
 
     <View
         android:id="@+id/splash_background"
         android:layout_width="match_parent"
-        android:layout_height="160dp" />
+        android:layout_height="160dp"
+        android:background="?attr/colorPrimary" />
 
     <TextView
         android:layout_width="match_parent"
@@ -22,10 +21,9 @@
         android:textColor="@color/white"
         android:textSize="22sp" />
 
-    <android.support.v7.widget.CardView
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:cardCornerRadius="0dp">
+        android:layout_height="match_parent">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -63,7 +61,6 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="-7dp"
             android:indeterminate="true" />
-
-    </android.support.v7.widget.CardView>
+    </FrameLayout>
 
 </LinearLayout>
