--- a/app/src/main/res/layout/fragment_recyclerview.xml
+++ b/app/src/main/res/layout/fragment_recyclerview.xml
@@ -63,46 +63,77 @@
         android:layout_marginRight="@dimen/recyclerview_fab_margin_right"
         android:visibility="gone" />
 
-    <android.support.v7.widget.CardView
+    <FrameLayout
         android:id="@+id/foreground_parent"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_gravity="bottom"
-        android:layout_marginBottom="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginTop="50dp"
-        android:visibility="gone"
-        app:cardBackgroundColor="?android:attr/colorBackground"
-        app:cardCornerRadius="5dp"
-        app:cardElevation="16dp"
-        app:cardUseCompatPadding="true">
+        android:clickable="true"
+        android:focusable="true"
+        android:visibility="gone">
 
-        <LinearLayout
+        <android.support.v7.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="bottom"
-            android:orientation="vertical">
+            android:layout_marginBottom="16dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginTop="50dp"
+            app:cardBackgroundColor="?android:attr/colorBackground"
+            app:cardCornerRadius="5dp"
+            app:cardElevation="16dp"
+            app:cardUseCompatPadding="true">
 
-            <TextView
-                android:id="@+id/foreground_text"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                android:background="?attr/colorPrimaryDark"
-                android:gravity="center_vertical"
-                android:maxLines="1"
-                android:paddingEnd="16dp"
-                android:paddingLeft="16dp"
-                android:paddingRight="16dp"
-                android:paddingStart="16dp"
-                android:textColor="@color/white"
-                android:textSize="17sp" />
+                android:layout_height="match_parent"
+                android:layout_gravity="bottom"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/foreground_text"
+                    android:layout_width="match_parent"
+                    android:layout_height="?attr/actionBarSize"
+                    android:background="?attr/colorPrimaryDark"
+                    android:gravity="center_vertical"
+                    android:maxLines="1"
+                    android:paddingEnd="16dp"
+                    android:paddingLeft="16dp"
+                    android:paddingRight="16dp"
+                    android:paddingStart="16dp"
+                    android:textColor="@color/white"
+                    android:textSize="17sp" />
+
+                <FrameLayout
+                    android:id="@+id/foreground_content"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" />
+            </LinearLayout>
+        </android.support.v7.widget.CardView>
+    </FrameLayout>
+
+    <FrameLayout
+        android:id="@+id/dialog_parent"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:clickable="true"
+        android:focusable="true"
+        android:visibility="gone">
+
+        <android.support.v7.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="bottom"
+            android:layout_margin="16dp"
+            app:cardBackgroundColor="?android:attr/colorBackground"
+            app:cardCornerRadius="5dp"
+            app:cardElevation="16dp"
+            app:cardUseCompatPadding="true">
 
             <FrameLayout
-                android:id="@+id/foreground_content"
+                android:id="@+id/dialog_content"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
-
-        </LinearLayout>
-    </android.support.v7.widget.CardView>
+        </android.support.v7.widget.CardView>
+    </FrameLayout>
 </RelativeLayout>
