Don't allow same primary and accent color

--- a/app/src/main/res/layout/preference_primary_color_view.xml
+++ b/app/src/main/res/layout/preference_primary_color_view.xml
@@ -8,4 +8,5 @@
     android:layout_marginRight="10dp"
     android:clickable="false"
     android:focusable="false"
+    app:bordercolor="?attr/colorAccent"
     app:circlecolor="?attr/colorPrimary" />
