CardView: Fix size

--- a/app/src/main/res/layout/fragment_buildprop_search.xml
+++ b/app/src/main/res/layout/fragment_buildprop_search.xml
@@ -22,6 +22,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/key"
+        android:inputType="text"
         android:maxLines="1"
         android:textColor="@color/white"
         android:textSize="15sp"
@@ -32,6 +33,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/value"
+        android:inputType="text"
         android:maxLines="1"
         android:textColor="@color/white"
         android:textSize="15sp"
