--- a/app/src/main/res/layout/fragment_recyclerview.xml
+++ b/app/src/main/res/layout/fragment_recyclerview.xml
@@ -67,6 +67,7 @@
         android:id="@+id/foreground_parent"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="?attr/dim_dialog_background"
         android:clickable="true"
         android:focusable="true"
         android:translationZ="10dp"
@@ -76,14 +77,12 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="bottom"
-            android:layout_marginBottom="16dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
-            android:layout_marginTop="50dp"
+            android:layout_marginBottom="100dp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp"
+            android:layout_marginTop="100dp"
             app:cardBackgroundColor="?android:attr/colorBackground"
-            app:cardCornerRadius="5dp"
-            app:cardElevation="16dp"
-            app:cardUseCompatPadding="true">
+            app:cardCornerRadius="5dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -117,6 +116,7 @@
         android:id="@+id/dialog_parent"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="?attr/dim_dialog_background"
         android:clickable="true"
         android:focusable="true"
         android:translationZ="10dp"
@@ -126,11 +126,12 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="bottom"
-            android:layout_margin="16dp"
+            android:layout_marginBottom="100dp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp"
+            android:layout_marginTop="100dp"
             app:cardBackgroundColor="?android:attr/colorBackground"
-            app:cardCornerRadius="5dp"
-            app:cardElevation="16dp"
-            app:cardUseCompatPadding="true">
+            app:cardCornerRadius="5dp">
 
             <FrameLayout
                 android:id="@+id/dialog_content"
