--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -18,5 +18,6 @@
     <attr name="edittext_build_prop_style" format="reference" />
     <attr name="banner_frame_drawable" format="reference" />
     <attr name="native_express_id" format="string" />
+    <attr name="dim_dialog_background" format="color" />
 
 </resources>
