--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,6 +11,7 @@
         <item name="android:textColorPrimaryInverse">@color/white</item>
         <item name="android:textAlignment">gravity</item>
         <item name="android:textDirection">locale</item>
+        <item name="dim_dialog_background">@color/dim_foreground_disabled_material_dark</item>
     </style>
 
     <style name="AppThemeDark" parent="Theme.AppCompat.NoActionBar">
@@ -24,6 +25,7 @@
         <item name="android:textColorPrimaryInverse">@color/black</item>
         <item name="android:textAlignment">gravity</item>
         <item name="android:textDirection">locale</item>
+        <item name="dim_dialog_background">@color/dim_foreground_disabled_material_light</item>
     </style>
 
     <style name="AppThemeParent" parent="AppTheme" />
