--- a/app/src/main/res/layout-land/fragment_banner_resizer.xml
+++ b/app/src/main/res/layout-land/fragment_banner_resizer.xml
@@ -31,9 +31,7 @@
                 android:layout_margin="2dp"
                 app:cardCornerRadius="3dp"
                 app:cardElevation="2dp" />
-
         </LinearLayout>
-
     </FrameLayout>
 
     <LinearLayout
@@ -76,6 +74,15 @@
                 app:srcCompat="@drawable/ic_cancel" />
 
             <android.support.v7.widget.AppCompatImageButton
+                android:id="@+id/restore"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:background="?attr/selectableItemBackgroundBorderless"
+                android:scaleType="fitCenter"
+                android:tint="?attr/colorAccent"
+                app:srcCompat="@drawable/ic_restore" />
+
+            <android.support.v7.widget.AppCompatImageButton
                 android:id="@+id/done"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
@@ -85,9 +92,6 @@
                 android:scaleType="fitCenter"
                 android:tint="?attr/colorAccent"
                 app:srcCompat="@drawable/ic_done" />
-
         </LinearLayout>
-
     </LinearLayout>
-
 </LinearLayout>
